--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>웹 스터디 ::: 여상수</title>
+  <title>웹 스터디 ::: 한규영</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css"
     integrity="sha512-10/jx2EXwxxWqCLX/hHth/vu2KY3jCF70dCQB8TSgNjbCVAC/8vai53GfMDrO2Emgwccf2pJqxct9ehpzG+MTw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -14,15 +14,16 @@
 <body>
   <div id="head_title">
     <h1>웹화면 구현 수업의 웹스터디 페이지</h1>
-    <h2><!-- TODO: 자기이름을 써주세요--></h2>
+    <h2>한규영</h2>
     <p>
       안녕하세요!<br />
-      <!-- TODO: 간단한 자기소개를 써주세요(1줄~2줄) -->
+      목원대학교 컴퓨터 공학과 19학번 한규영입니다.
       <br /><br />
       <!-- FIXME: 폰트어썸에서 3개~5개 정도를 넣어주세요 -->
       <i class="fa-brands fa-tiktok fa-2xl" style="color: #f20202"></i>
       <i class="fa-brands fa-facebook fa-beat fa-2xl" style="color: #74c0fc"></i>
       <i class="fa-brands fa-facebook fa-2xl" style="color: #74c0fc"></i>
+      <i class="fa-solid fa-hand"></i>
     </p>
   </div>
   <hr />
@@ -30,6 +31,17 @@
   <h1>애니메이션</h1>
 
   <!-- TODO: 애니메이션 속성으로 전환 효과 제어하기 p.250 -->
+  <div id="ani3">
+    div박스<br>
+    <button id="start">ㄱ</button>
+    <button id="paused">ㄴ</button>
+
+  
+
+  </div>
+  <div id="trans5">
+    움직이는 박스
+  </div>
 
 
   <!-- FIXME: 아래쪽 주석 삭제하기 -->
@@ -40,54 +52,51 @@
     <!-- FIXME: 지금 예제를 대체하는 콘텐츠로, 영화 또는 드라마 콘텐츠 4개 작성 -->
     <div class="flex-item">
       <dl>
-        <dt>영화소개 : 듄2</dt>
+        <dt>짱구는 못말려</dt>
         <dd>
-          <a target="_blank" href="https://namu.wiki/w/%EB%93%84:%20%ED%8C%8C%ED%8A%B8%202"><img
-              src="https://search.pstatic.net/common?quality=75&direct=true&src=https%3A%2F%2Fmovie-phinf.pstatic.net%2F20240207_151%2F1707288437263gBsdd_JPEG%2Fmovie_image.jpg"
+          <a target="_blank" href="https://namu.wiki/w/%EC%A7%B1%EA%B5%AC%EB%8A%94%20%EB%AA%BB%EB%A7%90%EB%A0%A4"><img
+              src="https://i.namu.wiki/i/MqvGdrVwYnRTdCfrv3PFHv-QJ5-uDlwOTS-EWtbXgHfhxeoUV9ptJOdA6luXxsSy_KW5cedVLfNsg4XXWs4mwI8p2Mb-Z6HFlSz2evts3NvEvLlKae05bFwBvKYU0PYNe63oeMxgYjOxJqafpZHC4Q.webp"
               alt="" /></a>
-          2024년 2월 28일에 개봉한 드니 빌뇌브 감독의 듄 시리즈 실사영화.
-          2021년 영화 〈듄〉의 속편이다.
+              짱구는 못말려는 1990년 8월에 나온 우스이 요시토의 연재 만화 크레용 신짱을 원작으로 한 애니메이션이다. 대한민국과 일본, 중국, 대만, 인도를 비롯한 아시아 지역과 스페인을 비롯한 유럽, 그리고 미국까지 전세계 40여개국에 수출, 방영되었으며 많은 사랑을 받아온 애니메이션이다.
         </dd>
       </dl>
     </div>
     <div class="flex-item">
       <dl>
-        <dt>영화소개 : 냉정과 열정 사이</dt>
+        <dt>원피스</dt>
         <dd>
           <a target="_blank"
-            href="https://namu.wiki/w/%EB%83%89%EC%A0%95%EA%B3%BC%20%EC%97%B4%EC%A0%95%20%EC%82%AC%EC%9D%B4"><img
-              src="https://i.namu.wiki/i/nfVqC1FuFaC27Kf6J_wHxE858tdwwFyP_2wZo4qIIB1VxSnOF-PJ7NyHZz9uySo9bz3gc5lr4cJHAuWvT8QsLGh38N-b8ci42Ndh5hUgN7D_-abhZL8ZT35Jz3_dN2d8GAnVvx3RP3eeuSXfX3sxUw.webp"
+            href="https://namu.wiki/w/%EC%9B%90%ED%94%BC%EC%8A%A4(%EC%95%A0%EB%8B%88%EB%A9%94%EC%9D%B4%EC%85%98)"><img
+              src="https://i.namu.wiki/i/NZYzPDmcMJmWH9pASMowXNRAVZwilLxVP-Y0ci63YcuI1om3kBPKCTcqKkWYVw5POHNnK_ax_6V95MiQ6iCpE5f_tZ3YNyc62qJtsiaD5XemcxaRQAgJk-wwVcfer5l1o0Qz2GZnWqsw-77MXWylvQ.webp"
               alt="" /></a><br />
-          2001년에 타케노우치 유타카, 진혜림 주연의 영화로 제작되었다.
-          타다이마 오카에리 엔딩의 전형적인 영화.
+              1999년 10월 20일 첫 방영을 시작해 현재까지도 방영중이다. 장기 방영작 중 1990년대에 가장 마지막으로 방영을 시작한 애니이기도 하다.[23] 애니메이션 제작은 토에이 애니메이션, 방송국은 후지 테레비.
+
         </dd>
       </dl>
     </div>
 
     <div class="flex-item">
       <dl>
-        <dt>넷플릭스 소개: 삼체</dt>
+        <dt>슬램덩크</dt>
         <dd>
           <a target="_blank"
-            href="https://namu.wiki/w/%EC%82%BC%EC%B2%B4%28%EB%AF%B8%EA%B5%AD%20%EB%93%9C%EB%9D%BC%EB%A7%88%29">
+            href="https://namu.wiki/w/%EC%8A%AC%EB%9E%A8%EB%8D%A9%ED%81%AC">
             <img
-              src="https://i.namu.wiki/i/oX1oa1g4_3hjnOfbeiX1KlJ_pQfzE-BG1ydHvLl_PLAjq-UOOGbF4nL9j7Zq-Duua0zf_Thf__So00aDy_HqLz-9Tu-SKgMY9rj4yGk3rALLHD-VGx5IssQkwwu4v4G2ptTs6uvLoFdQwLGWQoEXGA.webp"
+              src="https://i.namu.wiki/i/Tgrfa7WQIFALvd3QnQRi0tPNMsQAZSbHHLLSZ53n9L0em9dU416sbN7etAB7MTIedv7skkOPDvrR45IvQGy4lf56gDaRSZqkAEkUbt1uIOtBuH1VVjasz-N2f-OFs2TkNkwEg5jTaoGBIN9BBK968A.webp"
               alt="" /></a>
-          “물리학은 존재하지 않는다”라는 유서를 남기고 자살한 동료 과학자
-          '양둥'의 죽음이 석연치 않았던 '왕먀오'는 ...!
+              주간 소년 점프에 연재되었던 이노우에 다케히코의 농구 만화. 1990년 주간 소년 점프 42호로 연재 시작, 1996년 27호로 종료되었다. 한국에서는 1992년 주간 소년 챔프 7호로 연재 시작, 1996년 39호로 종료되었다.
         </dd>
       </dl>
     </div>
     </a>
     <div class="flex-item">
       <dl>
-        <dt>영화소개 : 범죄도시4</dt>
+        <dt>기생수</dt>
         <dd>
-          <a target="_blank" href="https://namu.wiki/w/%EB%B2%94%EC%A3%84%EB%8F%84%EC%8B%9C4"><img
-              src="https://i.namu.wiki/i/UV5cDIV4GTiR81tpwd8qsWzna_HaavSVxpgjwWoJgV9ydIbARV4-9_1KaBhQT8Esd20jCHUcgD8ZXm8pCJirRTIWeFbXs6xIGHFHDv6ywuWbDTk7X_afpPTjLXOltjfhNUDTSpaelAvhJsEU7wBSFA.webp"
+          <a target="_blank" href="https://namu.wiki/w/%EA%B8%B0%EC%83%9D%EC%88%98"><img
+              src="https://i.namu.wiki/i/TGM-fMxqeBy5SODkXA2kG4K8AnApHeiPCtWJf21HYsnQWh6vV7ZGFgp5JRDOwNbrAaglxp-n1-RgJaJutPN7QoSU8XM0Kz4_7xMREVXScTrkRBI1MBLa7QN0HzX9K1cOUmUoj8gfPnvH5sRZwYjbiQ.webp"
               alt="" /></a>
-          2024년 2월 28일에 개봉한 드니 빌뇌브 감독의 듄 시리즈 실사영화.
-          2021년 영화 〈듄〉의 속편이다.
+              일본의 SF 만화. 작가는 이와아키 히토시. 영문명은 Parasyte로 이는 작중 등장하는 패러사이트를 뜻하는 의미기도 하다. 이유는 불명이나, 원래 기생 생물을 의미하는 영단어는 Parasite이며 i를 쓰지만, 본작은 어째선지 y를 쓴다.
         </dd>
       </dl>
     </div>
@@ -151,6 +160,15 @@
       </dl>
     </div>
   </div>
+
+  <h1>화면 설계 그리드</h1>
+
+  <div class="grid-container" id></div>
+  <div class="gl-item header"></div>
+  <div class="gl-item sidebar"></div>
+  <div class="gl-item content"></div>
+  <div class="gl-item footer"></div>
+  <script src="./js/main.js"></script>
 
 </body>
 
